--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -1,5 +1,16 @@
 {
     "title": "HTMLPlayer",
+    "common": {
+        "cancel": "Annuler",
+        "close": "Fermer",
+        "create": "Créer",
+        "delete": "Supprimer",
+        "artist": "Artiste",
+        "album": "Album",
+        "duration": "Durée",
+        "loading": "Chargement...",
+        "noResults": "Aucun résultat trouvé"
+    },
     "favorites": {
         "favorites": "Favoris",
         "added": "Ajouté « {{title}} » aux favoris",
@@ -8,8 +19,6 @@
     "delete": {
         "songTitle": "Supprimer la chanson",
         "confirm": "Êtes-vous sûr de vouloir supprimer « {{title}} » ? Cette action est irréversible.",
-        "cancel": "Annuler",
-        "delete": "Supprimer",
         "noSongs": "Aucune chanson à supprimer"
     },
     "filePicker": {
@@ -23,11 +32,25 @@
     },
     "playlist": {
         "addTo": "Ajouter à la playlist",
-        "createNew": "Créer une nouvelle playlist",
-        "enterName": "Entrez le nom de la playlist...",
         "noPlaylists": "Aucune playlist pour le moment. Créez votre première !",
         "created": "Nouvelle playlist « {{name}} » créée et {{count}} chanson(s) ajoutée(s)",
-        "addedToExisting": "{{count}} chanson(s) ajoutée(s) à la playlist"
+        "addedToExisting": "{{count}} chanson(s) ajoutée(s) à la playlist",
+        "addPlaylist": "Ajouter une playlist",
+        "searchPlaylists": "Rechercher des playlists...",
+        "sharePlaylist": "Partager la playlist",
+        "createPlaylist": "Créer une nouvelle playlist",
+        "editPlaylist": "Modifier la playlist",
+        "enterPlaylistName": "Entrez un nom pour votre playlist",
+        "deletePlaylist": "Supprimer la playlist",
+        "deletePlaylistConfirmation": "Êtes-vous sûr de vouloir supprimer la playlist « {{name}} » ? Cette action est irréversible.",
+        "playlistCreated": "Nouvelle playlist « {{name}} » créée",
+        "playlistRenamed": "Playlist renommée en « {{name}} »",
+        "playlistDeleted": "Playlist « {{name}} » supprimée",
+        "playlistShareTitle": "Playlist : « {{name}} »",
+        "playlistShareText": "Découvrez cette playlist « {{name}} » avec {{count}} chanson(s)",
+        "playlistShared": "Playlist partagée avec succès",
+        "playlistCopied": "Informations de la playlist copiées dans le presse-papiers !",
+        "playlistShareFailed": "Échec du partage de la playlist"
     },
     "noResults": {
         "search": "Aucune chanson trouvée",
@@ -35,25 +58,19 @@
     },
     "songInfo": {
         "title": "Titre",
-        "artist": "Artiste",
-        "album": "Album",
-        "duration": "Durée",
-        "close": "Fermer",
         "songInfoTitle": "Informations sur la chanson"
     },
     "actions": {
         "selectAll": "Tout sélectionner",
         "deselectAll": "Tout désélectionner",
-        "cancel": "Annuler",
-        "close": "Fermer",
-        "addTo": "Actions"
+        "addTo": "Actions",
+        "back": "Back"
     },
     "batch": {
         "processing": "Traitement du lot {{currentBatch}} sur {{totalBatches}}..."
     },
     "player": {
         "selectSong": "Sélectionnez une chanson pour commencer la lecture",
-        "loading": "Chargement...",
         "albumArtAlt": "Pochette de l’album « {{title}} »",
         "addFavorite": "Ajouter aux favoris",
         "removeFavorite": "Retirer des favoris",
@@ -74,25 +91,6 @@
         "lyrics": "Paroles"
     },
     "allSongs": "Toutes les chansons",
-    "addPlaylist": "Ajouter une playlist",
-    "searchPlaylists": "Rechercher des playlists...",
-    "sharePlaylist": "Partager la playlist",
-    "createPlaylist": "Créer une nouvelle playlist",
-    "editPlaylist": "Modifier la playlist",
-    "enterPlaylistName": "Entrez un nom pour votre playlist",
-    "playlistName": "Nom de la playlist...",
-    "cancel": "Annuler",
-    "create": "Créer",
-    "deletePlaylist": "Supprimer la playlist",
-    "deletePlaylistConfirmation": "Êtes-vous sûr de vouloir supprimer la playlist « {{name}} » ? Cette action est irréversible.",
-    "playlistCreated": "Nouvelle playlist « {{name}} » créée",
-    "playlistRenamed": "Playlist renommée en « {{name}} »",
-    "playlistDeleted": "Playlist « {{name}} » supprimée",
-    "playlistShareTitle": "Playlist : « {{name}} »",
-    "playlistShareText": "Découvrez cette playlist « {{name}} » avec {{count}} chanson(s)",
-    "playlistShared": "Playlist partagée avec succès",
-    "playlistCopied": "Informations de la playlist copiées dans le presse-papiers !",
-    "playlistShareFailed": "Échec du partage de la playlist",
     "moreOptions": "Plus d’options",
     "noPlaylistsFound": "Aucune playlist trouvée",
     "themeLight": "Clair",
@@ -105,7 +103,6 @@
     "about": "À propos",
     "aboutHTMLPlayer": "À propos de HTMLPlayer",
     "aboutHTMLPlayerDesc": "HTMLPlayer v2.0 - Une interface moderne de streaming musical construite avec React.",
-    "close": "Fermer",
     "visualizers": {
         "bars": {
             "name": "Barres",
@@ -130,20 +127,17 @@
             }
         }
     },
-    "addToPlaylist": "Ajouter à la playlist",
     "share": "Partager",
     "goToArtist": "Aller à l’artiste",
     "goToAlbum": "Aller à l’album",
     "deleteFromLibrary": "Supprimer de la bibliothèque",
+    "deletedFromLibrary": "{{song}} supprimé de votre bibliothèque",
     "deleteSong": "Supprimer la chanson",
     "deleteSongConfirmation": "Êtes-vous sûr de vouloir supprimer définitivement « {{song}} » ? Cette action est irréversible.",
     "noPlaylistsYet": "Aucune playlist pour le moment. Créez votre première !",
     "createNewPlaylist": "Créer une nouvelle playlist",
     "songInformation": "Informations sur la chanson",
     "songInformationDescription": "Informations détaillées sur la chanson.",
-    "artist": "Artiste",
-    "album": "Album",
-    "duration": "Durée",
     "songAlreadyInPlaylist": "« {{song}} » est déjà dans la playlist « {{playlist}} »",
     "addedToPlaylist": "« {{song}} » ajouté à la playlist « {{playlist}} »",
     "createdNewPlaylistAddedSong": "Nouvelle playlist « {{playlist}} » créée et « {{song}} » ajoutée",
@@ -155,38 +149,56 @@
     "choosePlaylistOrCreateMultiple": "Ajouter {{count}} chansons à une playlist ou en créer une nouvelle",
     "settings": {
         "title": "Paramètres",
-        "description": "Personnalisez votre expérience et vos préférences d’écoute.",
-        "reset": "Réinitialiser par défaut",
+        "description": "Personnalisez votre expérience de lecteur de musique et vos préférences.",
+        "reset": "Rétablir les valeurs par défaut",
         "resetError": "Erreur lors de la réinitialisation des paramètres.",
         "themeError": "Erreur de chargement du thème !",
         "audio": {
-            "title": "Paramètres audio",
+            "title": "Paramètres Audio",
             "crossfade": "Fondu enchaîné"
         },
         "playback": {
-            "title": "Paramètres de lecture",
-            "shuffle": "Mode aléatoire par défaut",
-            "shuffleDesc": "Activer la lecture aléatoire par défaut au démarrage",
-            "repeat": "Mode répétition par défaut",
-            "autoPlay": "Lecture automatique de la prochaine chanson",
-            "autoPlayDesc": "Lire automatiquement la chanson suivante lorsque la chanson en cours se termine",
+            "title": "Paramètres de Lecture",
+            "shuffle": "Mode Aléatoire par Défaut",
+            "shuffleDesc": "Activer le mode aléatoire par défaut lors du démarrage de la lecture",
+            "repeat": "Mode de Répétition par Défaut",
+            "autoPlay": "Lecture Automatique de la Chanson Suivante",
+            "autoPlayDesc": "Jouer automatiquement la chanson suivante quand la chanson actuelle se termine",
             "tempo": "Tempo",
-            "gapless": "Lecture continue",
-            "gaplessDesc": "Jouer les morceaux les uns après les autres sans aucune pause entre eux."
+            "gapless": "Lecture Sans Interruption",
+            "gaplessDesc": "Jouer les pistes de manière consécutive sans pauses entre elles."
         },
         "interface": {
-            "title": "Paramètres d’interface",
-            "colorTheme": "Thème de couleur",
-            "themeMode": "Mode du thème",
+            "title": "Paramètres d'Interface",
+            "colorTheme": "Thème de Couleur",
+            "themeMode": "Mode de Thème",
             "themeModeDesc": "Choisissez votre mode de thème préféré",
-            "compact": "Mode compact",
-            "compactDesc": "Utiliser une disposition plus compacte pour afficher plus de contenu",
-            "albumArt": "Afficher la pochette",
-            "albumArtDesc": "Afficher la pochette d’album dans l’interface du lecteur",
-            "lyrics": "Afficher les paroles",
-            "lyricsDesc": "Afficher les paroles des chansons lorsqu’elles sont disponibles",
+            "compact": "Mode Compact",
+            "compactDesc": "Utiliser une mise en page plus compacte pour afficher plus de contenu",
+            "albumArt": "Afficher la Pochette d'Album",
+            "albumArtDesc": "Afficher la pochette d'album dans l'interface du lecteur",
+            "lyrics": "Afficher les Paroles",
+            "lyricsDesc": "Afficher les paroles de la chanson quand disponibles",
             "language": "Langue",
-            "languageDescription": "La langue de l'application"
+            "languageDescription": "Dans quelle langue l'application est"
+        },
+        "shortcuts": {
+            "title": "Raccourcis Clavier",
+            "description": "Personnalisez les raccourcis clavier pour un accès rapide aux contrôles du lecteur",
+            "enabled": "Activer les Raccourcis Clavier",
+            "enabledDesc": "Permettre aux raccourcis clavier de contrôler le lecteur de musique",
+            "playPause": "Lecture/Pause",
+            "nextTrack": "Piste Suivante",
+            "previousTrack": "Piste Précédente",
+            "volumeUp": "Augmenter le Volume",
+            "volumeDown": "Diminuer le Volume",
+            "mute": "Activer/Désactiver le Son",
+            "toggleShuffle": "Activer/Désactiver l'Aléatoire",
+            "toggleRepeat": "Activer/Désactiver la Répétition",
+            "toggleLyrics": "Activer/Désactiver les Paroles",
+            "toggleVisualizer": "Activer/Désactiver le Visualiseur",
+            "search": "Focus Recherche",
+            "openSettings": "Ouvrir les Paramètres"
         }
     }
 }
